@@ -15,3 +15,4 @@ config.log
 *.o
 *.aux
 *.log
+sieve.opt
